--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "colorama>=0.4.6",
     "langchain>=0.3.27",
+    "langchain-ollama>=0.3.7",
     "langgraph>=0.6.6",
 ]
