--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "colorama>=0.4.6",
+    "ipython>=8.37.0",
     "langchain>=0.3.27",
     "langchain-ollama>=0.3.7",
     "langgraph>=0.6.6",
